<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="viewmodel_factory_error">Unable to construct viewModel</string>
    <string name="election_information">Election Information</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding address</string>
    <string name="follow_election">Follow election</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="voter_info_error">There is no information. Please try another state</string>
    <string name="representative_search_title">Representative search</string>
    <string name="address_line_hint_1">Address line 1</string>
    <string name="address_line_hint_2">Address line 2</string>
    <string name="city_line_hint">City</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My representatives</string>
    <string name="img_description">Representative image</string>
    <string name="browser_description">Browser image</string>
    <string name="twitter_description">Twitter image</string>
    <string name="facebook_description">Facebook image</string>
    <string name="zip_hint">Zip</string>

    <!-- TODO: Add necessary string values -->

</resources>
