<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="voterViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="?colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:title="@{voterViewModel.election.name}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@{voterViewModel.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/voting_location"
            android:paddingTop="@dimen/default_padding"
            android:onClick="@{()->voterViewModel.onClickUrl(voterViewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl)}"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->voterViewModel.onClickUrl(voterViewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl)}"
            android:text="@string/ballot_information"
            android:paddingTop="@dimen/default_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/corresponding_address"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterViewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <Button
            android:id="@+id/save_election_btn"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:onClick="@{() -> (!voterViewModel.election.isSaved()) ? voterViewModel.saveElection(voterViewModel.election) : voterViewModel.removeElection(voterViewModel.election.id)}"
            android:text="@{(!voterViewModel.election.isSaved()) ? @string/follow_election : @string/unfollow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/follow_election" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>