<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/representative_img"
            android:layout_width="@dimen/round_img_size"
            android:layout_height="@dimen/round_img_size"
            android:layout_marginStart="@dimen/img_margin"
            android:contentDescription="@string/img_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/representative_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@{representative.office.name}"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="@dimen/img_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_img"/>

        <TextView
            android:id="@+id/representative_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/img_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_img" />

        <TextView
            android:id="@+id/representative_party"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/img_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintTop_toBottomOf="@+id/representative_name"
            app:layout_constraintEnd_toStartOf="@+id/browser_img"
            app:layout_constraintStart_toEndOf="@+id/representative_img"/>

        <ImageView
            android:id="@+id/browser_img"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:layout_marginEnd="@dimen/representative_img_margin"
            android:contentDescription="@string/browser_description"
            app:layout_constraintTop_toBottomOf="@+id/representative_name"
            app:layout_constraintEnd_toStartOf="@+id/facebook_img"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebook_img"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:layout_marginEnd="@dimen/representative_img_margin"
            android:contentDescription="@string/facebook_description"
            app:layout_constraintTop_toBottomOf="@+id/representative_name"
            app:layout_constraintEnd_toStartOf="@+id/twitter_img"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter_img"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:layout_marginEnd="@dimen/representative_img_margin"
            android:contentDescription="@string/twitter_description"
            app:layout_constraintTop_toBottomOf="@+id/representative_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>